use rds to save records

--- a/plugin.cfg
+++ b/plugin.cfg
@@ -55,3 +55,6 @@ proxy:proxy
 erratic:erratic
 whoami:whoami
 on:github.com/mholt/caddy/onevent
+fallback:github.com/coredns/fallback
+pdsql_sqlite:github.com/jinzhu/gorm/dialects/sqlite
+pdsql:github.com/silentred/rds
